ทำ UI ของระบบค้นหาประวัติการตรวจรักษา - close #131
