# backend/docs/swagger.yaml
@@ -700,7 +700,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Diagnosis'
+            items:
+              $ref: '#/definitions/ent.Diagnosis'
+            type: array
         "400":
           description: Bad Request
           schema:
